CRUD Services are completed
Auth Services and hashing for password needs to be completed first for Operator CRUD
